float y position fixed de whatsapp

--- a/01.IntroALaWeb/03.TravelAgencyCSS/style.css
+++ b/01.IntroALaWeb/03.TravelAgencyCSS/style.css
@@ -2,7 +2,7 @@
 fuente de Google Pattaya */
 html, body {
     font-size:24px;
-    font-family: 'Pattaya', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: content-box;
